@@ -13,8 +13,9 @@ module Mongoid #:nodoc
     extend self
     include ActiveModel::Observing
 
-    attr_accessor :master, :settings
+    attr_accessor :master, :settings, :defaults
     @settings = {}
+    @defaults = {}
 
     # Define a configuration option with a default.
     #
@@ -28,11 +29,21 @@ module Mongoid #:nodoc
     #
     # @since 2.0.0.rc.1
     def option(name, options = {})
-      define_method(name) do
-        settings.has_key?(name) ? settings[name] : options[:default]
-      end
-      define_method("#{name}=") { |value| settings[name] = value }
-      define_method("#{name}?") { send(name) }
+      defaults[name] = settings[name] = options[:default]
+
+      class_eval <<-RUBY
+        def #{name}
+          settings[#{name.inspect}]
+        end
+
+        def #{name}=(value)
+          settings[#{name.inspect}] = value
+        end
+
+        def #{name}?
+          #{name}
+        end
+      RUBY
     end
 
     option :allow_dynamic_fields, :default => true
@@ -253,7 +264,7 @@ module Mongoid #:nodoc
     # @example Reset the configuration options.
     #   config.reset
     def reset
-      settings.clear
+      settings.replace(defaults)
     end
 
     # @deprecated User replica sets instead.
